Add manual HMS smoke client